test/spec_vectors/simd_i16x8_arith/fail/module_10.wat
(module (func $i16x8.mul-1st-arg-empty (result v128) (i16x8.mul (v128.const i16x8 0 0 0 0 0 0 0 0))))